Fix Badge alignment

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -172,10 +172,10 @@ $disabled-fade: 0.6;
 .Badge {
   margin-left: spacing(tight);
   display: inline-flex;
-  margin-top: spacing(base-tight);
+  margin-top: spacing(tight);
 
   @include breakpoint-after(nav-min-window-corrected()) {
-    margin-top: spacing(tight);
+    margin-top: spacing(extra-tight);
   }
 }
 
